--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -1,14 +1,11 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Azure Template Deployment
 
-# Controls when the workflow will run
 on: workflow_dispatch
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
-    name: "My First Job"
+  transpile-bicep:
+    name: "Transpile Bicep"
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
