--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Azure Login
-      - uses: azure/login@v2
+        uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_DEPLOY_CREDS }}
 
