--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -21,8 +21,13 @@ jobs:
       - name: Deploy Bicep template
         uses: azure/bicep-deploy@v2
         with:
-          resourceGroupName: 'MyTestSite'
-          templateFile: '../templates/azure-resources.bicep'
+          type: deployment
+          operation: create
+          name: Development
+          scope: resourceGroup
+          subscriptionId: bc25c459-f8eb-42a1-9f41-ad3613f1e963
+          resource-group-name: MyTestSite
+          template-file: ../templates/azure-resources.bicep
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
