Fix this parameter name

--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -25,6 +25,6 @@ jobs:
           operation: create
           name: Development
           scope: resourceGroup
-          subscriptionId: bc25c459-f8eb-42a1-9f41-ad3613f1e963
+          subscription-id: bc25c459-f8eb-42a1-9f41-ad3613f1e963
           resource-group-name: MyTestSite
           template-file: ../templates/azure-resources.bicep
