--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -1,7 +1,13 @@
 name: Azure Template Deployment
 
 env:
-  AZURE_DEPLOY_CREDENTIALS: ${{ secrets.AZURE_DEPLOY_CREDS }}
+  AZURE_DEPLOY_CREDENTIALS: >
+    {
+      "clientId": "${{ secrets.AZURE_DEPLOY_CLIENT_ID }}",
+      "clientSecret": "${{ secrets.AZURE_DEPLOY_CLIENT_SECRET }}",
+      "subscriptionId": ${{ secrets.AZURE_DEPLOY_SUBSCRIPTION_ID }},
+      "tenantId": "${{ secrets.AZURE_DEPLOY_TENANT_ID }}"
+    }
 
 on: workflow_dispatch
 
