--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -40,5 +40,7 @@ jobs:
           subscription-id: bc25c459-f8eb-42a1-9f41-ad3613f1e963
           resource-group-name: MyTestSite
           template-file: ./templates/azure-resources.bicep
-          parameters: |
-            "clientId=${{  secrets.AZURE_DEPLOY_CLIENT_ID }} tenantId=${{  secrets.AZURE_DEPLOY_TENANT_ID }} clientSecret=${{ secrets.AZURE_DEPLOY_CLIENT_SECRET}}"
+          parameters:
+            clientId: ${{  secrets.AZURE_DEPLOY_CLIENT_ID }}
+            tenantId: ${{  secrets.AZURE_DEPLOY_TENANT_ID }}
+            clientSecret: ${{ secrets.AZURE_DEPLOY_CLIENT_SECRET }}
