--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -2,13 +2,13 @@ name: Azure Template Deployment
 
 on: workflow_dispatch
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  DeployAzureTemplate:
-    name: "Deploy Azure Template"
+  LoginToAzure:
+    name: "Login to Azure"
     runs-on: ubuntu-latest
+    outputs:
+      AZURE_DEPLOY_CREDENTIALS: ${{ steps.compute_azure_creds.outputs.AZURE_DEPLOY_CREDENTIALS }}
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Compute Azure Credentials
         id: compute_azure_creds
@@ -30,6 +30,12 @@ jobs:
         with:
           creds: ${{ steps.compute_azure_creds.outputs.AZURE_DEPLOY_CREDENTIALS }}
 
+
+  DeployAzureTemplate:
+    name: "Deploy Azure Template"
+    runs-on: ubuntu-latest
+    needs: LoginToAzure
+    steps:
       - name: Deploy Bicep template
         uses: azure/bicep-deploy@v2
         with:
@@ -40,4 +46,4 @@ jobs:
           subscription-id: bc25c459-f8eb-42a1-9f41-ad3613f1e963
           resource-group-name: MyTestSite
           template-file: ./templates/azure-resources.bicep
-          parameters: ${{ steps.compute_azure_creds.outputs.AZURE_DEPLOY_CREDENTIALS }}
+          parameters: ${{ needs.LoginToAzure.outputs.AZURE_DEPLOY_CREDENTIALS }}
