--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -30,10 +30,12 @@ jobs:
   DeployAzureTemplate:
     name: "Deploy Azure Template"
     runs-on: ubuntu-latest
-    needs: LoginToAzure
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+
+      - id: azure-login
+        name: Azure Login
+        uses: ./.github/actions/azure-login
 
       - name: Deploy Bicep template
         uses: azure/bicep-deploy@v2
@@ -45,4 +47,4 @@ jobs:
           subscription-id: bc25c459-f8eb-42a1-9f41-ad3613f1e963
           resource-group-name: MyTestSite
           template-file: ./templates/azure-resources.bicep
-          parameters: ${{ needs.LoginToAzure.outputs.AZURE_DEPLOY_CREDENTIALS }}
+          parameters: ${{ steps.azure-login.outputs.AZURE_DEPLOY_CREDENTIALS }}
