--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -35,7 +35,7 @@ jobs:
 
       - id: azure-login
         name: Azure Login
-        uses: ../.github/actions/azure-login
+        uses: ./.github/actions/azure-login
 
       - name: Deploy Bicep template
         uses: azure/bicep-deploy@v2
