--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -19,13 +19,12 @@ jobs:
           azure-deploy-tenant-id: ${{ secrets.AZURE_DEPLOY_TENANT_ID }}
 
       - name: Deploy Bicep template
-        uses: azure/bicep-deploy@v2
-        with:
-          type: deployment
-          operation: create
-          name: Development
-          scope: resourceGroup
-          subscription-id: bc25c459-f8eb-42a1-9f41-ad3613f1e963
-          resource-group-name: MyTestSite
-          template-file: ./templates/azure-resources.bicep
-          parameters: ${{ steps.azure-login.outputs.AZURE_DEPLOY_CREDENTIALS }}
+        run: |
+          az deployment group create \
+            --resource-group MyTestSite \
+            --template-file ./templates/azure-resources.bicep \
+            --parameters \
+              clientId=${{ secrets.AZURE_DEPLOY_CLIENT_ID }} \
+              clientSecret=${{ secrets.AZURE_DEPLOY_CLIENT_SECRET }} \
+              tenantId=${{ secrets.AZURE_DEPLOY_TENANT_ID }} \
+              subscriptionId=${{ secrets.AZURE_DEPLOY_SUBSCRIPTION_ID }}
