Revert "Remove these parameters"
This reverts commit 08bd63be5a7c7ac641ab786c2984c0b218c6637f.

--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -22,4 +22,9 @@ jobs:
         run: |
           az deployment group create \
             --resource-group MyTestSite \
-            --template-file ./templates/azure-resources.bicep
+            --template-file ./templates/azure-resources.bicep \
+            --parameters \
+              clientId=${{ secrets.AZURE_DEPLOY_CLIENT_ID }} \
+              clientSecret=${{ secrets.AZURE_DEPLOY_CLIENT_SECRET }} \
+              tenantId=${{ secrets.AZURE_DEPLOY_TENANT_ID }} \
+              subscriptionId=${{ secrets.AZURE_DEPLOY_SUBSCRIPTION_ID }}
