--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -8,7 +8,7 @@ env:
 jobs:
   DeployAzureTemplate:
     name: "Deploy Azure Template"
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
 
