--- a/.github/workflows/azure-deploy-static-assets.yml
+++ b/.github/workflows/azure-deploy-static-assets.yml
@@ -5,7 +5,7 @@ on: workflow_dispatch
 jobs:
   DeployStaticAssets:
     name: "Deploy Static Resources"
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
 
