Try bash shell here

--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -32,6 +32,7 @@ jobs:
           echo "AZURE_FRONT_DOOR_ENDPOINT_NAME=$azureFrontDoorEndpointName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Deploy Bicep template
+        shell: bash
         run: |
           az deployment group create \
             --resource-group MyTestSite \
