--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -46,4 +46,7 @@ jobs:
           ./tools/EnableStaticWebHosting.ps1 `
             --IndexDocument index.html `
             --ErrorDocument404Path 404.html `
-            --storageAccountName=${{ env.STORAGE_ACCOUNT_NAME }}
+            --storageAccountName=${{ env.STORAGE_ACCOUNT_NAME }} `
+            --TenantId='${{ secrets.AZURE_DEPLOY_TENANT_ID }}' `
+            --ClientId='${{ secrets.AZURE_DEPLOY_CLIENT_ID }}' `
+            --ClientSecret='${{ secrets.AZURE_DEPLOY_CLIENT_SECRET }}'
