--- a/.github/actions/azure-login/action.yml
+++ b/.github/actions/azure-login/action.yml
@@ -37,3 +37,9 @@ runs:
       uses: azure/login@v2
       with:
         creds: ${{ steps.compute_azure_creds.outputs.AZURE_DEPLOY_CREDENTIALS }}
+
+    - name: Connect Az Account
+      shell: pwsh
+      run: |
+        Connect-AzAccount -ServicePrincipal -Tenant '${{ inputs.azure-deploy-tenant-id }}' -Credential (New-Object System.Management.Automation.PSCredential('${{ inputs.azure-deploy-client-id }}', (ConvertTo-SecureString '${{ inputs.azure-deploy-client-secret }}' -AsPlainText -Force))) -ErrorAction Stop
+        Select-AzSubscription -SubscriptionId '${{ inputs.azure-deploy-subscription-id }}' -ErrorAction Stop
