--- a/.github/workflows/azure-template-deployment.yml
+++ b/.github/workflows/azure-template-deployment.yml
@@ -33,8 +33,8 @@ jobs:
             --template-file ./templates/resourceGroup.bicep \
             --parameters resourceGroupName=${{ vars.AZURE_RESOURCE_GROUP }} resourceGroupLocation=centralus
 
-      - id: create-globally-unique-string-for-resource-group
-        name: Create Globally Unique Names For Resource Group
+      - name: Create Globally Unique Names For Resource Group
+        id: create-globally-unique-string-for-resource-group  
         uses: ./.github/actions/create-unique-names
         with:
           resourceGroupName: ${{ vars.AZURE_RESOURCE_GROUP }}
