--- a/.github/workflows/azure-deploy-client-app.yml
+++ b/.github/workflows/azure-deploy-client-app.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Initialize Client Application Config From Azure
         shell: pwsh
         run: |
-          pwsh ./client/init.ps1 -ResourceGroup ${{ vars.AZURE_RESOURCE_GROUP }}
+          ./client/init.ps1 -ResourceGroup ${{ vars.AZURE_RESOURCE_GROUP }}
 
       - name: Build Client Application
         run: |
